Move privileges resolution to Roles/RolesService
Preparation step to make recursive resolution based also on granted
roles (hierarchy) easier.

Relates: #12109